# LLM_zoomcamp_homework

./: README.md  main.py  pyproject.toml
01-agentic-RAG/: homework.ipynb  rag_helper.py
